kubernetes/deployment-crawler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping2me-crawler
  namespace: tests
spec:
  selector:
    matchLabels:
      app: ping2me-crawler
  replicas: 1
  template:
    metadata:
      labels:
        app: ping2me-crawler
    spec:
      containers:
      - name: ping2me-crawler
        image: damasceno/ping2me-crawler:1.1.0
      imagePullSecrets:
      - name: regcred
