kubernetes/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping2me-api
  namespace: tests
spec:
  ports:
  - port: 4567
    protocol: TCP
    targetPort: 4567
  selector:
    app: ping2me-api
  type: NodePort
