kubernetes/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping2me-ui
  namespace: tests
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ping2me-ui
  type: NodePort
