kubernetes/ingress-api.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ping2me-api
  namespace: tests
spec:
  rules:
  - host: api.yourcompany.com
    http:
      paths:
      - backend:
          serviceName: ping2me-api
          servicePort: 4567
